--- a/index.html
+++ b/index.html
@@ -702,14 +702,14 @@ footer p {
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
     <script>
         const firebaseConfig = {
-            apiKey: "Votre-API-Key",
-            authDomain: "Votre-Auth-Domain",
-            projectId: "Votre-Project-ID",
-            storageBucket: "Votre-Storage-Bucket",
-            messagingSenderId: "Votre-Messaging-Sender-ID",
-            appId: "Votre-App-ID",
-            measurementId: "Votre-Measurement-ID"
-        };
+            apiKey: "AIzaSyAxt0weMXXJvfjxRuIENvy47tX3U7dyZ0M",
+    authDomain: "flux2024oldest.firebaseapp.com",
+    projectId: "flux2024oldest",
+    storageBucket: "flux2024oldest.appspot.com",
+    messagingSenderId: "798534273767",
+    appId: "1:798534273767:web:b4642c7bc6e009ef433042",
+    measurementId: "G-DB6ZSFBDT0"
+};
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
