--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ button[type="submit"] {
 <body>
 
     <header>
-        <h1>OldestStream</h1>
+        <h1>OldestFlux</h1>
         <nav>
             <ul>
                 <li><button id="accueilButton">Accueil</button></li>
