--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5074406904097551"
-     crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-5074406904097551">
 
     
     <link rel="icon" href="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/41c65bf1-d86c-a7f6-b1fe-c746a4783db0.jpg" type="image/x-icon">
