--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
     <div id="comedyVideos" class="categoryVideos" style="display: none;">
         <h2 class="video-title">Vidéos de Comédie : bientôt disponible !</h2>
         <div class="video-container" data-category="comedy" data-login="true">
-            <iframe src="https://mega.nz/embed/aU8XxaTT#WAtEXi_odyk89h_IuJEWxVzpKa0MQHvh0OG1EtEQYRA" frameborder="0" allowfullscreen></iframe>
+            <iframe src="" frameborder="0" allowfullscreen></iframe>
             <div class="image-container">
                 <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/5a587e09-37d6-eb0a-6003-8d739dcea631.jpeg" alt="Image de la vidéo" class="zoomableImage">
                 <div class="bande-noire">
