--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ snaptr('track', 'PAGE_VIEW');
   /* Polices */ @import url('https://fonts.googleapis.com/css2?family=Anta&family=Roboto+Slab&display=swap'); body { font-family: 'Anta', sans-serif; margin: 0; padding: 0; background-color: #287384; color: #333; }
 
 
-/* Header */ header {
-    background-color: #ff00ff; padding: 20px; text-align: center; 
+header {
+    background-color: #34495e;
+    padding: 20px;
+    text-align: center;
 }
-        
 
-
-        header h1 
+header h1 
         { font-family: 'Roboto Slab', serif; font-size: 2.5em; margin-bottom: 10px; color: #ff0000; border: 2px solid yellow; padding: 10px 20px; display: inline-block; 
         } 
         
