--- a/index.html
+++ b/index.html
@@ -880,11 +880,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="content-section">
     <div class="container">
-         <h1>Bienvenue sur notre site de streaming</h1>
-        <p>Pour accéder à nos vidéos, vous devez vous inscrire.</p>
-        <p>Les utilisateurs déjà abonnés à notre compte Snapchat bénéficient d'un accès gratuit.</p>
-        <p>Les personnes non abonnées à notre compte Snapchat obtiennent un mois gratuit après inscription.</p>
-    </div>
+         <h1>Bienvenue sur notre site de streaming 🎬</h1>
+        <p>Pour accéder à nos vidéos, vous devez vous inscrire.🙏</p>
+        <p>Abonnés à notre Snapchat 👻: accès gratuit. 🥰</p>
+        <p>Non abonnés : 1 mois gratuit après inscription.😭</p>
+         </div>
 </section>
 
      
