--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ snaptr('init', '5ce2fff9-54f4-435f-a64e-d8fead2b5105', {
 'user_email': 'nakapub13@gmail.com'
 });
 
-snaptr('track', 'https://lucious-lion04.github.io/flux/);
-
+// This line tracks a page view
+snaptr('track', 'PAGE_VIEW');
 </script>
 <!-- End Snap Pixel Code -->
 
