--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WS6XRLLS');</script>
-<!-- End Google Tag Manager -->
+
 <!-- Snap Pixel Code -->
 <script type='text/javascript'>
 (function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
@@ -877,12 +871,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="content-section">
     <div class="container">
-         <h1>Bienvenue sur notre site de streaming 🎬</h1>
-        <p>Pour accéder à nos vidéos, vous devez vous inscrire.🙏</p>
-        <p>Abonnés à notre Snapchat 👻: accès gratuit. 🥰</p>
-        <p>Non abonnés : 1 mois gratuit après inscription.😭</p>
-         </div>
+        <h1>Bienvenue sur notre site de streaming 🎬</h1>
+        <p>Accédez à toutes nos vidéos sans frais supplémentaires !</p>
+        <p>Abonnés à notre Snapchat 👻 : accès gratuit immédiat. 🥰</p>
+        <p>Non abonnés : profitez d'un mois gratuit après inscription.🎉</p>
+        <p>Aucune carte de crédit requise pour l'inscription !</p>
+    </div>
 </section>
+
 
      
     <section id="featured">
