--- a/index.html
+++ b/index.html
@@ -139,41 +139,63 @@ header h1
 
 
     
-
-  
 /* Main */
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
 }
 
 .categoryVideos {
-    width: 350px;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #dcdcdc;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    overflow: hidden;
+  width: 350px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #dcdcdc;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
-
-.description, .video-info, .rating {
-    margin-bottom: 10px;
+.description,
+.video-info,
+.rating {
+  margin-bottom: 10px;
 }
 
 .video-info span {
-    margin-right: 10px;
-    font-weight: bold;
+  margin-right: 10px;
+  font-weight: bold;
 }
 
 .rating .stars {
-    color: gold;
-    margin-right: 10px;
-  }
+  color: gold;
+  margin-right: 10px;
+}
+
+.media-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Ratio 16:9 */
+  border-radius: 10px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.media-container iframe,
+.media-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+  
+
 
 /* Styles pour la bande noire */
 .bande-noire {
