--- a/index.html
+++ b/index.html
@@ -1238,8 +1238,6 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
 </div>
-
-
     
     <!-- Section Drame -->
     <div id="drameVideos" class="categoryVideos" style="display: none;">
@@ -1299,7 +1297,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         <div class="video-container" data-category="thriller" data-login="true">
             <iframe src="" frameborder="0" allowfullscreen></iframe>
             <div class="image-container">
-                <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/f58b3018-e062-a2f3-3006-81557efccc4c.jpeg" alt="Image de la vidéo" class="zoomableImage">
+                <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/0e474f27-1df1-23e5-167c-b4e1e29ba646.jpg" alt="Image de la vidéo" class="zoomableImage">
                 <div class="bande-noire">
                     👻OLDEST🇯🇲
                     <br />
