--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         </div>
         <div class="rating">
             <span>Note : </span>
-            <span class="stars">★★★★☆</span>
+            <span class="stars">★★☆☆☆</span>
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
     </div>
@@ -1225,7 +1225,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         </div>
         <div class="rating">
             <span>Note : </span>
-            <span class="stars">★★★★☆</span>
+            <span class="stars">★★★☆☆</span>
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
     </div>
@@ -1256,7 +1256,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         </div>
         <div class="rating">
             <span>Note : </span>
-            <span class="stars">★★★★☆</span>
+            <span class="stars">☆☆☆☆☆</span>
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
 </div>
@@ -1289,7 +1289,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         </div>
         <div class="rating">
             <span>Note : </span>
-            <span class="stars">★★★★☆</span>
+            <span class="stars">★★★☆☆</span>
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
     </div>
@@ -1313,11 +1313,11 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
 
 <!-- Section thriller -->
     <div id="thrillerVideos" class="categoryVideos" style="display: none;">
-            <h2 class="video-title">Vidéos de thriller : The Beekeeper
+        <h2 class="video-title">Vidéos de Thriller : The Beekeeper
 
-2024 🐝 !</h2>
+2024 !</h2>
         <div class="video-container" data-category="thriller" data-login="true">
-            <iframe src="" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://mega.nz/embed/J38hDbLC#AmVXFlgwDmTvAzE76eUpgRUjJPUYBNknYN_CAgGoQvM" frameborder="0" allowfullscreen></iframe>
             <div class="image-container">
                 <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/0e474f27-1df1-23e5-167c-b4e1e29ba646.jpg" alt="Image de la vidéo" class="zoomableImage">
                 <div class="bande-noire">
@@ -1325,9 +1325,24 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
                     <br />
                     bientôt disponible !
                 </div>
-            </div>
+            </div>       
+ <div class="overlay" id="thrillerOverlay">
+            <button class="watch-button" id="thrillerButton">Regarder</button>
+ </div>        
+    </div>
+<p class="description">Description : Emmené par Statham, le long métrage raconte la vengeance d'un ancien soldat d'élite après le meurtre de la femme qui l'avait accueilli pour rénover son terrain et s'occuper de ses abeilles.🐝
+         </p>
+        <div class="video-info">
+            <span class="views">3880 vues</span>
+            <span class="duration">3:45</span>
+        </div>
+        <div class="rating">
+            <span>Note : </span>
+            <span class="stars">★★★★☆</span>
+            <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
     </div>
+
 
 
 
