--- a/index.html
+++ b/index.html
@@ -1341,26 +1341,15 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
             <span class="stars">★★★★☆</span>
             <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
         </div>
-    </div>
-
-
-
-
-    
+    </div>    
 </div>
 
 <!-- Modal pour le zoom -->
 <div id="zoomModal" class="zoom-modal">
     <span class="close">&times;</span>
- 
-
-
 
     <img class="zoom-modal-content" id="zoomedImage">
 </div>
-
-
-
 
         <div id="myModal" class="modal">
             <div class="modal-content">
@@ -1419,8 +1408,8 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
         </div>
         <div id="orderSummary">
             <p>Abonnement: <span id="subscriptionStatus">Free</span></p>
-            <p>Durée gratuite : <span id="freeDuration">1 mois offert </span></p>
-            <p>Prix après offre: <span id="totalPrice">1€</span></p>
+            <p>Durée gratuite : <span id="freeDuration"> </span></p>
+            <p>   <span id="totalPrice">  </span></p>
                    </div>
        <button id="confirmOrderButton" class="profile-button-green">Obtenir l'offre</button>
 <hr />
