--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@ button[type="submit"].dark-mode {
 }
 
 
-          .snapchat-button {
+           .snapchat-button {
         display: inline-block;
         margin-top: 20px;
         padding: 15px 30px;
@@ -912,6 +912,7 @@ button[type="submit"].dark-mode {
         text-decoration: none;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         transition: all 0.3s ease;
+        text-shadow: 1px 1px 2px black;
     }
     .snapchat-button:hover {
         background-color: #ffe600;
@@ -957,7 +958,7 @@ button[type="submit"].dark-mode {
     <div class="container">        
         <p>Accédez à toutes nos vidéos sans frais supplémentaires !</p>
         <p>Suivez-nous sur Snapchat 👻 pour découvrir les nouveaux films !</p>
-<a href="https://www.snapchat.com/add/votre_nom_d_utilisateur" class="snapchat-button">Ajouter sur Snapchat</a>
+<a href="https://www.snapchat.com/add/lucious-lion04?share_id=o0vYeZN4D4w&locale=fr-FR" class="snapchat-button">Ajouter sur Snapchat</a>
         <p>Aucune carte de crédit requise pour l'inscription !</p>
 
 
