--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ button[type="submit"].dark-mode {
     <div class="container">        
         <p>Accédez à toutes nos vidéos sans frais supplémentaires !</p>
         <p>Suivez-nous sur Snapchat 👻 pour découvrir les nouveaux films !</p>
-<a href="https://www.snapchat.com/add/lucious-lion04?share_id=o0vYeZN4D4w&locale=fr-FR" class="snapchat-button">Ajouter sur Snapchat</a>
+<a href="https://www.snapchat.com/add/lucious-lion04?share_id=6OZv1y8NFXI&locale=fr-FR" class="snapchat-button">Ajouter sur Snapchat</a>
         <p>Aucune carte de crédit requise pour l'inscription !</p>
 
 
