--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <!-- Snap Pixel Code -->
+<!-- Snap Pixel Code -->
 <script type='text/javascript'>
 (function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
 {a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
