--- a/index.html
+++ b/index.html
@@ -923,39 +923,7 @@ button[type="submit"].dark-mode {
     <button class="carousel-control next">❯</button>
 </div>
 
-     
-<div id="videos">
-    <!-- Vidéo d'accueil -->
-    <div id="welcomeVideo" class="categoryVideos">
-        <h2 class="video-title">Godzilla x Kong 2024!</h2>
-        <div class="video-container">
-            <iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/NncAHSDT#4d6GNuwvcaM94Nm2BB1FitQg3S_zOkIHptIImptLXMY" allowfullscreen ></iframe>
-
-            <!-- Conteneur pour l'image avec zoom -->
-            <div class="image-container">
-                <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/79120212-44be-35f7-a9db-f05a1554631c.jpeg" alt="Votre description" class="zoomableImage">
-                <div class="bande-noire">
-                    👻OLDEST🇯🇲
-                    <br />                  
-                </div>            
-            </div>                
-        <div class="overlay" id="videoOverlay">
-                <button class="watch-button" id="watchButton" data-category="welcome">Regarder</button>
-</div>                
-    </div>       
-        <p class="description">
-            Description : Le tout-puissant Kong et le redoutable Godzilla unissent leurs forces contre une terrible menace encore secrète qui risque de les anéantir et qui met en danger la survie même de l’espèce humaine. GODZILLA X KONG : LE NOUVEL EMPIRE remonte à l’origine des deux titans et aux mystères de Skull Island, tout en révélant le combat mythique qui a contribué à façonner ces deux créatures hors du commun et lié leur sort à celui de l’homme pour toujours…
-        </p>
-        <div class="video-info">
-            <span class="views">5060 vues</span>
-            <span class="duration">3:45</span>
-        </div>
-        <div class="rating">
-            <span>Note : </span>
-            <span class="stars">★★★★☆</span>
-            <span class="user-review">Avis : Excellente vidéo, très instructive.</span>
-        </div>
-    </div>
+     <div id="videos"> <!-- Vidéo d'accueil --> <div id="welcomeVideo" class="categoryVideos"> <h2 class="video-title">Godzilla x Kong 2024!</h2> <div class="video-container"> <iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/NncAHSDT#4d6GNuwvcaM94Nm2BB1FitQg3S_zOkIHptIImptLXMY" allowfullscreen ></iframe> <!-- Conteneur pour l'image avec zoom --> <div class="image-container"> <img src="https://mcusercontent.com/40a9f1a77d46874eba2309d88/images/79120212-44be-35f7-a9db-f05a1554631c.jpeg" alt="Votre description" class="zoomableImage"> <div class="bande-noire"> 👻OLDEST🇯🇲 <br /> </div> </div> <div class="overlay" id="videoOverlay"> <button class="watch-button" id="watchButton" data-category="welcome">Regarder</button> </div> </div> <p class="description"> Description : Le tout-puissant Kong et le redoutable Godzilla unissent leurs forces contre une terrible menace encore secrète qui risque de les anéantir et qui met en danger la survie même de l’espèce humaine. </p> <div class="video-info"> <span class="views">5060 vues</span> <span class="duration">3:45</span> </div> <div class="rating"> <span>Note : </span> <span class="stars">★★★★☆</span> <span class="user-review">Avis : Excellente vidéo, très instructive.</span> </div> <!-- Lien de partage --> <p>Partagez cette vidéo : <a href="https://lucious-lion04.github.io/flux/?video=welcomeVideo" target="_blank">Cliquez ici pour voir Godzilla x Kong 2024!</a> </p> </div> </div>
 
 <div id="welcomeVideo" class="categoryVideos">
         <h2 class="video-title">STING 2024 !</h2>
@@ -1283,7 +1251,7 @@ Le Japon se remet à grand peine de la Seconde Guerre mondiale qu’un péril gi
 
         <!-- Ajoutez d'autres éléments de votre interface ici -->
 
-    </main>
+       </main>
 
     <div class="menu-icon" id="menuIcon">
         <span></span>
@@ -1893,4 +1861,3 @@ document.getElementById("searchBtn").addEventListener("click", rechercherVideos)
     
 </body>
 </html> 
-
